added work cards

--- a/index.html
+++ b/index.html
@@ -54,6 +54,40 @@
           <!-- Work Section -->
 
           <!-- My Work -->
+          <section class="container">
+            <div class="row d-flex justify-content-around mt-8">
+              <h1 class="my-4">My Work</h1>
+            </div>
+
+            <div class="row justify-content-between text-centre mt-8">
+              <div class="col-lg-5 mx-auto mb-4">
+                <div class="card">
+                  <img src="https://static.wikia.nocookie.net/logopedia/images/1/19/YouTube_logo_2017.svg/revision/latest/scale-to-width-down/300?cb=20210829124756" class="card-img-top"/>
+                  <div class="card-body">
+                    <h4>Project 1</h4>
+                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                  </div>
+                  <div class="card-footer">
+                    <a href="" class="btn btn-primary" Find out More!</a>
+                  </div>
+                </div>
+              </div>
+
+
+              <div class="col-lg-5 mx-auto mb-4">
+                <div class="card">
+                  <img src="https://static.wikia.nocookie.net/logopedia/images/1/19/YouTube_logo_2017.svg/revision/latest/scale-to-width-down/300?cb=20210829124756"
+                  <div class="card-body">
+                    <h4>Project 2</h4>
+                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                  </div>
+                  <div class="card-footer">
+                    <a href="" class="btn btn-primary" Find out More!</a>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </section>
     </section>
 </body>
 </html>
