added more projects and logos

--- a/index.html
+++ b/index.html
@@ -62,13 +62,13 @@
             <div class="row justify-content-between text-centre mt-8">
               <div class="col-lg-5 mx-auto mb-4">
                 <div class="card">
-                  <img src="https://static.wikia.nocookie.net/logopedia/images/1/19/YouTube_logo_2017.svg/revision/latest/scale-to-width-down/300?cb=20210829124756" class="card-img-top"/>
+                  <img class="card-img-top" src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png"/>
                   <div class="card-body">
                     <h4>Project 1</h4>
                     <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                   </div>
                   <div class="card-footer">
-                    <a href="" class="btn btn-primary" Find out More!</a>
+                    <a href="" class="btn btn-primary"> Find out More!</a>
                   </div>
                 </div>
               </div>
@@ -76,16 +76,67 @@
 
               <div class="col-lg-5 mx-auto mb-4">
                 <div class="card">
-                  <img src="https://static.wikia.nocookie.net/logopedia/images/1/19/YouTube_logo_2017.svg/revision/latest/scale-to-width-down/300?cb=20210829124756"
+                  <img src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png"/>
                   <div class="card-body">
                     <h4>Project 2</h4>
                     <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                   </div>
                   <div class="card-footer">
-                    <a href="" class="btn btn-primary" Find out More!</a>
+                    <a href="" class="btn btn-primary"> Find out More!</a>
                   </div>
                 </div>
               </div>
+
+            </div>
+
+            <div class="row justify-content-between text-centre mt-8">
+              <div class="col-lg-5 mx-auto mb-4">
+                <div class="card">
+                  <img src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" class="card-img-top"/>
+                  <div class="card-body">
+                    <h4>Project 3</h4>
+                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                  </div>
+                  <div class="card-footer">
+                    <a href="" class="btn btn-primary"> Find out More!</a>
+                  </div>
+                </div>
+              </div>
+
+
+              <div class="col-lg-5 mx-auto mb-4">
+                <div class="card">
+                  <img class="card-img-top" src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png"/>
+                  <div class="card-body">
+                    <h4>Project 4</h4>
+                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                  </div>
+                  <div class="card-footer">
+                    <a href="" class="btn btn-primary"> Find out More!</a>
+                  </div>
+                </div>
+              </div>
+
+          </section>
+
+          <section>
+            <div class="container bg-secondary">
+              <div class="row align-items-center">
+                <div class="col-lg-5 order-lg-2">
+                  <img class="img-fluid rounded-circle" src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png"/>
+                </div>
+              </div>
+              <div>
+                <div>
+                  <h2>About Me!</h2>
+                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                  <a href="">
+                    <i></i>
+                    Download my resume
+                  </a>
+                </div>
+              </div>
+
             </div>
           </section>
     </section>
